// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFormControlLayoutDelimited is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiFormControlLayout euiFormControlLayoutDelimited testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <span
      class="euiFormControlLayoutDelimited__input"
    >
      start
    </span>
    <div
      class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
    >
      →
    </div>
    <span
      class="euiFormControlLayoutDelimited__input"
    >
      end
    </span>
  </div>
</div>
`;

exports[`EuiFormControlLayoutDelimited props delimiter is rendered as a node 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayoutDelimited"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <span
      class="euiFormControlLayoutDelimited__input"
    >
      start
    </span>
    <div
      class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
    >
      <span
        data-euiicon-type="error"
      />
    </div>
    <span
      class="euiFormControlLayoutDelimited__input"
    >
      end
    </span>
  </div>
</div>
`;

exports[`EuiFormControlLayoutDelimited props delimiter is rendered as a string 1`] = `
<div
  class="euiFormControlLayout euiFormControlLayoutDelimited"
>
  <div
    class="euiFormControlLayout__childrenWrapper"
  >
    <span
      class="euiFormControlLayoutDelimited__input"
    >
      start
    </span>
    <div
      class="euiText euiFormControlLayoutDelimited__delimeter emotion-euiText-s-euiTextColor-subdued"
    >
      +
    </div>
    <span
      class="euiFormControlLayoutDelimited__input"
    >
      end
    </span>
  </div>
</div>
`;
